kubernetes/fancify-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fancify-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fancify-frontend
  template:
    metadata:
      labels:
        app: fancify-frontend
    spec:
      containers:
      - name: fancify-frontend
        image: superioz/fancify-frontend:latest
        ports:
        - containerPort: 80
