kubernetes/fancify-dictionary-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fancify-dictionary
spec:
  selector:
    app: fancify-dictionary
  ports:
    - name: fancify-dictionary
      port: 8080
