kubernetes/fancify-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fancify-frontend
spec:
  selector:
    app: fancify-frontend
  ports:
    - name: fancify-frontend
      port: 80
